@@ -3,9 +3,9 @@ BINDINGS = java mono perl python ruby php
 FILES = Makefile version.properties ChangeLog COPYING
 DESTDIR =
 PREFIX = /usr/local
-RUBY = ruby
-PYTHON = python
-PERL = perl
+RUBY ?= ruby
+PYTHON ?= python
+PERL ?= perl
 CP = cp -l --parents
 PERL_OPTIMIZE = -O2 -g -Wall
 ARCHIVE_GZIP = rhash-bindings-$(VERSION)-src.tar.gz
