@@ -1,3 +1,6 @@
+Mon Jan 29 2018 J. Peter Mugaas
+	* better MSYS and CygWin support
+
 Fri Jan 26 2018 Aleksey
 	* configuration script
 
